crates/graphite/tests/ui/schema_partial_recovery.stderr
error: expected `;`
  --> tests/ui/schema_partial_recovery.rs:24:23
   |
24 |         node Employee extra_token;
   |                       ^^^^^^^^^^^
